@@ -1,16 +1,15 @@
 [Desktop Entry]
 Version=1.0
-Encoding=UTF-8
 _Name=Gwget Download Manager
 _GenericName=Download Manager
 _Comment=Download files from the Internet
 Exec=gwget
 StartupNotify=true
-Icon=gwget.png
+Icon=gwget
 Terminal=false
 X-MultipleArgs=false
 Type=Application
-Categories=Network;FileTransfer;GNOME;GTK
+Categories=Network;FileTransfer;GNOME;GTK;
 X-GNOME-Bugzilla-Bugzilla=GNOME
 X-GNOME-Bugzilla-Product=gwget
 X-GNOME-Bugzilla-Component=General
